# Fact_Checker_Backend

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
.github/: README.md
core/: config.py
static/: index.html  script.js  style.css
workflow/: graph.py  nodes.py  prompts.py  schemas.py  state.py  utils.py
